// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`customization > render with custom className 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-literal yozora-code-literal__container yozora-code yozora-code__root custom-code"
  >
    <div
      class="yozora-code-literal__toolbar"
    >
      <span
        class="yz:select-none"
      >
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#ed6c60]"
          title="close"
        />
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#f7c151]"
          title="minimize"
        />
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#64c856]"
          title="maximize"
        />
      </span>
      <span
        class="yozora-code-literal__title"
        title=""
      />
      <span
        class="yozora-code-literal__copy-btn"
      >
        <button
          aria-label="Copy to clipboard"
          class="yozora-common-copy-button__container"
          data-copy-status="pending"
          type="button"
        >
          copy
        </button>
      </span>
    </div>
    <code
      class="yozora-code-literal__content"
    >
      <pre>
        <div
          class="yozora-code-highlighter__container prism-code"
          style="color: rgb(212, 212, 212); max-height: calc(calc(var(--yozora_lineHeightCode, 1.6) * 1.8) + 6px); min-height: 100%;"
        >
          <div
            class="yozora-code-highlighter__linenos"
            style="width: 2.2em;"
          >
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
            >
              <span>
                1
              </span>
            </div>
          </div>
          <div
            class="yozora-code-highlighter__codes"
          >
            <div
              class="yozora-code-highlighter__code-wrapper"
            >
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                  let a = 1
                </span>
              </div>
            </div>
          </div>
        </div>
      </pre>
    </code>
  </div>
</DocumentFragment>
`;

exports[`snapshot > embed 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-embed yozora-code-embed__container yozora-code yozora-code__root"
  >
    <span>
      Answer: 5
    </span>
  </div>
</DocumentFragment>
`;

exports[`snapshot > literal 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-literal yozora-code-literal__container yozora-code yozora-code__root"
  >
    <div
      class="yozora-code-literal__toolbar"
    >
      <span
        class="yz:select-none"
      >
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#ed6c60]"
          title="close"
        />
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#f7c151]"
          title="minimize"
        />
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#64c856]"
          title="maximize"
        />
      </span>
      <span
        class="yozora-code-literal__title"
        title="/home/demo/a.tsx"
      >
        /home/demo/a.tsx  | 6 lines.
      </span>
      <span
        class="yozora-code-literal__copy-btn"
      >
        <button
          aria-label="Copy to clipboard"
          class="yozora-common-copy-button__container"
          data-copy-status="pending"
          type="button"
        >
          copy
        </button>
      </span>
    </div>
    <code
      class="yozora-code-literal__content"
    >
      <pre>
        <div
          class="yozora-code-highlighter__container prism-code language-jsx"
          style="color: rgb(212, 212, 212); max-height: 0px;"
        >
          <div
            class="yozora-code-highlighter__linenos"
            style="width: 2.2em;"
          >
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line yozora-code-highlighter__highlight-line"
            >
              <span>
                1
              </span>
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line yozora-code-highlighter__highlight-line"
            >
              <span>
                2
              </span>
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
            >
              <span>
                3
              </span>
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line yozora-code-highlighter__highlight-line"
            >
              <span>
                4
              </span>
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
            >
              <span>
                5
              </span>
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
            >
              <span>
                6
              </span>
            </div>
          </div>
          <div
            class="yozora-code-highlighter__codes"
          >
            <div
              class="yozora-code-highlighter__code-wrapper"
            >
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line yozora-code-highlighter__highlight-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  (
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  )
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  {
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line yozora-code-highlighter__highlight-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  const
                </span>
                <span
                  class="token plain"
                >
                   a 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token number"
                  style="color: rgb(181, 206, 168);"
                >
                  1
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  ;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  const
                </span>
                <span
                  class="token plain"
                >
                   b 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token number"
                  style="color: rgb(181, 206, 168);"
                >
                  2
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  ;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line yozora-code-highlighter__highlight-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  const
                </span>
                <span
                  class="token plain"
                >
                   c 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  =
                </span>
                <span
                  class="token plain"
                >
                   a 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  *
                </span>
                <span
                  class="token plain"
                >
                   a 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  +
                </span>
                <span
                  class="token plain"
                >
                   b 
                </span>
                <span
                  class="token operator"
                  style="color: rgb(212, 212, 212);"
                >
                  *
                </span>
                <span
                  class="token plain"
                >
                   b
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  ;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                        
                </span>
                <span
                  class="token keyword"
                  style="color: rgb(86, 156, 214);"
                >
                  return
                </span>
                <span
                  class="token plain"
                >
                   
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &lt;
                </span>
                <span
                  class="token tag"
                  style="color: rgb(86, 156, 214);"
                >
                  span
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &gt;
                </span>
                <span
                  class="token plain-text"
                >
                  Answer: 
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  {
                </span>
                <span
                  class="token plain"
                >
                  c
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  }
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag"
                  style="color: rgb(86, 156, 214);"
                >
                  span
                </span>
                <span
                  class="token tag punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  &gt;
                </span>
                <span
                  class="token plain"
                />
              </div>
              <div
                class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                style="color: rgb(212, 212, 212);"
              >
                <span
                  class="token plain"
                >
                      
                </span>
                <span
                  class="token punctuation"
                  style="color: rgb(106, 153, 85);"
                >
                  }
                </span>
              </div>
            </div>
          </div>
        </div>
      </pre>
    </code>
  </div>
</DocumentFragment>
`;

exports[`snapshot > live 1`] = `
<DocumentFragment>
  <div
    class="yozora-code-live yozora-code-live__container yozora-code yozora-code__root"
  >
    <div
      class="yozora-code-live__toolbar"
    >
      <span
        class="yz:select-none"
      >
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#ed6c60]"
          title="close"
        />
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#f7c151]"
          title="minimize"
        />
        <span
          class="yz:inline-block yz:box-border yz:size-[12px] yz:rounded-full yz:ml-[8px] yz:bg-[#64c856]"
          title="maximize"
        />
      </span>
      <span
        class="yozora-code-live__title"
        title=""
      />
      <span
        class="yozora-code-live__copy-btn"
      >
        <button
          aria-label="Copy to clipboard"
          class="yozora-common-copy-button__container"
          data-copy-status="pending"
          type="button"
        >
          copy
        </button>
      </span>
    </div>
    <div
      class="yozora-code-live__main yozora-code-live__main-vertical"
    >
      <div
        class="yozora-code-live__editor"
      >
        <div
          class="yozora-code-editor yozora-code-editor__container"
          padding="10"
          style="tab-size: 2;"
        >
          <div
            class="yozora-code-editor__textarea"
          >
            <div
              class="yozora-code-editor__textarea-linenos"
              style="width: 2.2em;"
            />
            <textarea
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="yozora-code-editor__textarea-contents"
              spellcheck="false"
              style="tab-size: 2; white-space: pre; padding: 0.5rem 0.6em 0px 12px;"
            >
              () =&gt; {
      const a = 1;
      const b = 2;
      const c = a * a + b * b;
      return &lt;span&gt;Answer: {c}&lt;/span&gt;
    }
            </textarea>
          </div>
          <pre
            aria-hidden="true"
            class="yozora-code-editor__previewer"
            style="tab-size: 2; white-space: pre;"
          >
            <div
              class="yozora-code-highlighter__container prism-code language-jsx"
              style="color: rgb(212, 212, 212); max-height: calc(calc(var(--yozora_lineHeightCode, 1.6) * 4.8) + 6px); min-height: 100%;"
            >
              <div
                class="yozora-code-highlighter__linenos"
                style="width: 2.2em;"
              >
                <div
                  class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
                >
                  <span>
                    1
                  </span>
                </div>
                <div
                  class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
                >
                  <span>
                    2
                  </span>
                </div>
                <div
                  class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
                >
                  <span>
                    3
                  </span>
                </div>
                <div
                  class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
                >
                  <span>
                    4
                  </span>
                </div>
                <div
                  class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
                >
                  <span>
                    5
                  </span>
                </div>
                <div
                  class="yozora-code-highlighter__line yozora-code-highlighter__lineno-line"
                >
                  <span>
                    6
                  </span>
                </div>
              </div>
              <div
                class="yozora-code-highlighter__codes"
              >
                <div
                  class="yozora-code-highlighter__code-wrapper"
                >
                  <div
                    class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      (
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      )
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =&gt;
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      {
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      const
                    </span>
                    <span
                      class="token plain"
                    >
                       a 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token number"
                      style="color: rgb(181, 206, 168);"
                    >
                      1
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      ;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      const
                    </span>
                    <span
                      class="token plain"
                    >
                       b 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token number"
                      style="color: rgb(181, 206, 168);"
                    >
                      2
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      ;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      const
                    </span>
                    <span
                      class="token plain"
                    >
                       c 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      =
                    </span>
                    <span
                      class="token plain"
                    >
                       a 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      *
                    </span>
                    <span
                      class="token plain"
                    >
                       a 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      +
                    </span>
                    <span
                      class="token plain"
                    >
                       b 
                    </span>
                    <span
                      class="token operator"
                      style="color: rgb(212, 212, 212);"
                    >
                      *
                    </span>
                    <span
                      class="token plain"
                    >
                       b
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      ;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                            
                    </span>
                    <span
                      class="token keyword"
                      style="color: rgb(86, 156, 214);"
                    >
                      return
                    </span>
                    <span
                      class="token plain"
                    >
                       
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &lt;
                    </span>
                    <span
                      class="token tag"
                      style="color: rgb(86, 156, 214);"
                    >
                      span
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token plain-text"
                    >
                      Answer: 
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      {
                    </span>
                    <span
                      class="token plain"
                    >
                      c
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      }
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &lt;/
                    </span>
                    <span
                      class="token tag"
                      style="color: rgb(86, 156, 214);"
                    >
                      span
                    </span>
                    <span
                      class="token tag punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token plain"
                    />
                  </div>
                  <div
                    class="yozora-code-highlighter__line yozora-code-highlighter__code-line token-line"
                    style="color: rgb(212, 212, 212);"
                  >
                    <span
                      class="token plain"
                    >
                          
                    </span>
                    <span
                      class="token punctuation"
                      style="color: rgb(106, 153, 85);"
                    >
                      }
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </pre>
        </div>
      </div>
      <div
        class="yozora-code-live__previewer yozora-code-live__previewer-center"
      >
        <div
          class="yozora-code-embed yozora-code-embed__container"
        >
          <span>
            Answer: 5
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
